--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
 
 # Editor directories and files
 .vscode/*
@@ -25,5 +26,5 @@ dist-ssr
 
 # Build
 *.tsbuildinfo
-*.d.ts
 vite.config.js
+vite.config.d.ts
